sites/web-chatgpthing/style/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
    background-color: #701a75;
}

 #parallax::-webkit-scrollbar {
     width: 0.5rem;
     background-color: transparent;
 }

 #parallax::-webkit-scrollbar-thumb {
     background-color: rgba(153, 153, 153, 0.32);
     border-radius: 0.25rem;
     height: 20%;
 }

 #parallax::-webkit-scrollbar-thumb:hover {
     background-color: rgba(153, 153, 153, 0.38);
 }

